add localstorage persist and public folder build

--- a/src/scss/components/_board_cards.scss
+++ b/src/scss/components/_board_cards.scss
@@ -71,7 +71,7 @@
 
     &:before {
       background-color: #ff3730;
-      background-image: url('/assets/img/ic_delete_white_36px.svg');      
+      background-image: url('/img/ic_delete_white_36px.svg');      
     }
 
   }
@@ -84,7 +84,7 @@
 
     &:before {
       background-color: #7dc4a1;  
-      background-image: url('/assets/img/ic_done_white_32px.svg');
+      background-image: url('/img/ic_done_white_32px.svg');
     }
     
   }
