--- a/src/assets/scss/_placeholders.scss
+++ b/src/assets/scss/_placeholders.scss
@@ -1,24 +1,16 @@
-%titleSectionWithUnderline {
-  & {
-    position: relative;
-    margin-top: 0;
-    font-weight: bold;
-    color: $primary;
-  }
-
-  &:after {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: -18px;
-    display: block;
-    width: 50px;
-    height: 4px;
-    background-color: $primary;
-  }
-}
-
 %listUnstyled {
   padding: 0;
   margin: 0;
+}
+
+%buttonsUnstyled {
+  & {
+    border: 0;
+    outline: 0;
+    background-color: transparent;
+  }
+
+  &:hover {
+    cursor: pointer;
+  }
 }
