--- a/src/containers/Board/components/Filters/Filters.scss
+++ b/src/containers/Board/components/Filters/Filters.scss
@@ -1,9 +1,8 @@
 @import "app";
 
 .filters {
-  position: fixed;
-  bottom: 30px;
   background-color: #f4f4f4;
+  margin: rem(15px) 0;
 }
 
 .label {
