--- a/src/containers/Board/components/CardItem/CardItem.scss
+++ b/src/containers/Board/components/CardItem/CardItem.scss
@@ -1,15 +1,21 @@
 @import "app";
 
 .cardItem {
-  padding: rem(12px) rem(10px);
-  border-radius: rem(5px);
-  background-color: #fff;
-  font-size: rem(16px);
-  text-align: right;
-  color: #555;
+  & {
+    padding: rem(12px) rem(10px);
+    border-radius: rem(5px);
+    background-color: #fff;
+    font-size: rem(16px);
+    text-align: right;
+    color: #555;
+  }
+
+  &:hover {
+    cursor: move;
+  }
 }
 
-.cardItem {
+.cardItem + .cardItem {
   margin-top: rem(10px);
 }
 
@@ -28,7 +34,7 @@
     padding: rem(8px) rem(15px);
     min-width: rem(90px);
     height: 31px;
-      background-color: #ff6f69;    
+    background-color: #ff6f69;
     color: #fff;
     font-size: rem(12px);
     font-weight: 600;
